kustomization/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doh
  namespace: dns-over-https
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: doh
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: doh
    spec:
      automountServiceAccountToken: false
      containers:
        - name: doh
          image: ghcr.io/stenstromen/dns-over-https:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8053
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            limits:
              cpu: 100m
              memory: 32Mi
            requests:
              cpu: 100m
              memory: 32Mi
          securityContext:
            runAsUser: 65534
            runAsGroup: 65534
            privileged: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            procMount: Default
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            httpGet:
              path: /getnsrecord?name=stentstromen.se
              port: 8053
          readinessProbe:
            httpGet:
              path: /getnsrecord?name=stentstromen.se
              port: 8053
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
