kustomization/redis_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dns-over-https
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis
