kustomization/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: doh-service
  namespace: dns-over-https
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: dns-tcp
      port: 8053
      targetPort: 8053
  selector:
    app: doh
